gs/base/msvccmd.mak
@@ -56,7 +56,7 @@ SH=
 
 # Define switches for the compilers.
 
-C_=
+C_=/c
 O_=-Fo
 RO_=$(O_)
 
@@ -242,8 +242,8 @@ CC_NO_WARN=$(CC_)
 # Compiler for auxiliary programs
 
 CCAUX=$(COMPAUX) $(VC8WARN) $(CFLAGS)
-CCAUX_=$(COMPAUX) $(VC8WARN) $(CFLAGS) /c
-CCAUX_NO_WARN=$(COMPAUX) $(CFLAGS) /c
+CCAUX_=$(COMPAUX) $(VC8WARN) $(CFLAGS)
+CCAUX_NO_WARN=$(COMPAUX) $(CFLAGS)
 
 # Compiler for Windows programs.
 CCWINFLAGS=$(COMPILE_FULL_OPTIMIZED)
